feat: impl DataSearchService and form text snippet